// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsing error messages from ocaml compiler multi error messages 1`] = `
Array [
  Array [
    Array [
      "Warning 11: this match case is unused.",
      Array [
        Array [
          5,
          2,
        ],
        Array [
          5,
          5,
        ],
      ],
    ],
  ],
  Array [
    Array [
      "Error: Syntax error",
      Array [
        Array [
          3,
          0,
        ],
        Array [
          3,
          3,
        ],
      ],
    ],
  ],
  Array [
    Array [
      "Error: Unbound value pi",
      Array [
        Array [
          3,
          15,
        ],
        Array [
          3,
          17,
        ],
      ],
    ],
  ],
  Array [
    Array [
      "Error: Unbound value random_gaussian",
      Array [
        Array [
          3,
          2,
        ],
        Array [
          3,
          17,
        ],
      ],
    ],
  ],
]
`;

exports[`parsing error messages from ocaml compiler single error message 1`] = `
Array [
  Array [
    Array [
      "Warning 11: this match case is unused.",
      Array [
        Array [
          5,
          2,
        ],
        Array [
          5,
          5,
        ],
      ],
    ],
  ],
]
`;
